Feat : Add mysql image + fix text analyser
